5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2564.log
== TEST (2019-06-07 12:13:58) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

while(size(x)>0):
	for l in vet:
	x=a+b
	
print(x)
-- ERROR:
File "XXXX", line 11
    x=a+b
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:14:05) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

while(size(x)>0):
	for l in vet:
		x=a+b
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:17:02) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

while(size(x)>0):
	for l in vet:
		l=a+b
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:22:54) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(x)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l=l1):
			e+=1
print(array[v,d,e])
-- ERROR:
File "XXXX", line 19
    if(l=l1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:23:05) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(x)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
print(array[v,d,e])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:23:58) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
print(array[v,d,e])
-- EXECUTION TIME:
1.07819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 21, in <module>
    print(array[v,d,e])
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:23:59) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
print(array[v,d,e])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:24:56) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	print(array[v,d,e])
-- EXECUTION TIME:
0.982626
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:24:56) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	print(array[v,d,e])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:25:25) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:26:29) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1		
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:27:22) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	(for l in vet) and (for l1 in vet1):
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1		
print(v)
-- ERROR:
File "XXXX", line 14
    (for l in vet) and (for l1 in vet1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:27:27) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and for l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1		
print(v)
-- ERROR:
File "XXXX", line 14
    for l in vet and for l1 in vet1:
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:27:54) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1
			print(v)
-- EXECUTION TIME:
0.775774
-- ERROR:
  File "/home/codebench/codes/1807/2564/main.py", line 22
    print(v)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:27:55) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1
			print(v)
-- ERROR:
File "XXXX", line 22
    print(v)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:28:01) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
	i+=1
		print(v)
-- ERROR:
File "XXXX", line 22
    print(v)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:28:13) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>0):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
		i+=1
		print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 03:27:52) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>i):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l[i]>l1[i]):
			v+=1	
		if(l[i]<l1[i]):
			d+=1
		if(l[i]==l1[i]):
			e+=1
		i+=1
		print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 03:28:52) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>i):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l[i]>l1[i]):
			v+=1	
		if(l[i]<l1[i]):
			d+=1
		if(l[i]==l1[i]):
			e+=1
		i+=1
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 03:28:54) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>i):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l[i]>l1[i]):
			v+=1	
		if(l[i]<l1[i]):
			d+=1
		if(l[i]==l1[i]):
			e+=1
		i+=1
	print(v)
-- EXECUTION TIME:
1.27596
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 03:29:34) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>i):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l[i]>l1[i]):
			v+=1	
		if(l[i]<l1[i]):
			d+=1
		if(l[i]==l1[i]):
			e+=1
		i+=1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 03:29:37) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

i=0
while(size(a)>i):
	v=0
	d=0
	e=0
	for l in vet and  l1 in vet1:
		if(l[i]>l1[i]):
			v+=1	
		if(l[i]<l1[i]):
			d+=1
		if(l[i]==l1[i]):
			e+=1
		i+=1
	print(i)
-- EXECUTION TIME:
1.82524
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:24:37) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>i):
	v=0
	d=0
	e=0
	for l in a and l1 in b:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
		
	print(i)
-- EXECUTION TIME:
1.21591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 10, in <module>
    while(size(a)>i):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:24:38) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>i):
	v=0
	d=0
	e=0
	for l in a and l1 in b:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
		
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:24:59) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)


while(size(a)>i):
	v=0
	d=0
	e=0
	for l in a and l1 in b:
		if(l>l1):
			v+=1	
		if(l<l1):
			d+=1
		if(l==l1):
			e+=1
		
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:25:42) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(vet, dtype=int)
b=zeros(vet1, dtype=int)

for l in a and l1 in b:
	if(l>l1):
		v+=1	
	if(l<l1):
		d+=1
	if(l==l1):
		e+=1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:32:01) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(3, dtype=int)


for i in range(size(a)): 
	if (vet[i]>vet1[i]):
		a[0]+=1
	if (vet[i]==vet1[i]):
		a[1]+=1
	if (vet[i]<vet1[i]):
		a[2]+=1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:32:50) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(3, dtype=int)


for i in range(size(a)): 
	if (vet[i]>vet1[i]):
		a[0]+=1
	elif (vet[i]==vet1[i]):
		a[1]+=1
	else :
		a[2]+=1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:34:05) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(3, dtype=int)


for i in range(size(a)): 
	if (vet[i]>vet1[i]):
		a[0]=a[0]+1
	elif (vet[i]==vet1[i]):
		a[1]=[1]+1
	else :
		a[2]=a[2]+1	
print(a)
-- EXECUTION TIME:
1.21282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 13, in <module>
    a[1]=[1]+1
TypeError: can only concatenate list (not "int") to list

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:34:07) 
-- CODE:
from numpy import*

vet=array(eval(input("")))
vet1=array(eval(input("")))

a=zeros(3, dtype=int)


for i in range(size(a)): 
	if (vet[i]>vet1[i]):
		a[0]=a[0]+1
	elif (vet[i]==vet1[i]):
		a[1]=[1]+1
	else :
		a[2]=a[2]+1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:35:52) 
-- CODE:
from numpy import*

vet =array(eval(input("")))
vet1 =array(eval(input("")))

a = zeros(3,dtype=int)


for i in range(size(vet)): 
	if (vet[i]>vet1[i]):
		a[0]+=1
	if (vet[i]==vet1[i]):
		a[1]+=1
	if(vet[i]<vet1[i]):
		a[2]+=1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:36:14) 
-- CODE:
from numpy import*

vet =array(eval(input("")))
vet1 =array(eval(input("")))

a = zeros(3,dtype=int)


for i in range(size(vet)): 
	if (vet[i]>vet1[i]):
		a[0]+=1
	if (vet[i]==vet1[i]):
		a[1]+=1
	if(vet[i]<vet1[i]):
		a[2]+=1	
print(a)
-- EXECUTION TIME:
0.962239
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
